tests/e2e/macros/procedural/custom/v2/snapshots/e2e__macros__procedural__custom__v2__attribute_improper_v2_with_user_error.snap
---
source: tests/e2e/macros/procedural/custom/v2/mod.rs
description: "// → test_package/Scarb.toml\n[package]\nname = \"test_package\"\nversion = \"0.1.0\"\nedition = \"2025_12\"\n\n[dependencies]\ncairols_test_macros_v2 = { path = \"/scarb_procedural_macros_v2\" }\n\n// → test_package/src/lib.cairo\n#[improper_attribute_macro_v2]\nfn foo() { 5_u8 + 5_felt252; }"
expression: report
---
[[expansions]]
analyzed_lines = """
#[improper_attribute_macro_v2]<caret>
fn f<caret>oo() { 5_u8 + 5_felt252; }
fn foo() { 5_u8 + 5_felt252; <caret>}
"""
generated_code = """
fn foo() {
    5_u8 + 5_felt252;
}
fn added_fun_v2() {
    {
        a = b;
    }
}
"""

mapped_diagnostics:
- url: '[ROOT_URL]test_package/src/lib.cairo'
  diagnostics:
  - related_code: '#[improper_attribute_macro_v2]'
    diagnostic:
      range:
        start:
          line: 0
          character: 0
        end:
          line: 0
          character: 30
      severity: 1
      code: E0006
      message: |-
        Identifier not found.
        note: this error originates in the attribute macro: `improper_attribute_macro_v2`
      relatedInformation:
      - location:
          uri: vfs://proc_improper_attribute_macro_v2.cairo
          range:
            start:
              line: 0
              character: 50
            end:
              line: 0
              character: 51
        message: Diagnostic mapped from here.
  - related_code: '#[improper_attribute_macro_v2]'
    diagnostic:
      range:
        start:
          line: 0
          character: 0
        end:
          line: 0
          character: 30
      severity: 1
      code: E0006
      message: |-
        Identifier not found.
        note: this error originates in the attribute macro: `improper_attribute_macro_v2`
      relatedInformation:
      - location:
          uri: vfs://proc_improper_attribute_macro_v2.cairo
          range:
            start:
              line: 0
              character: 52
            end:
              line: 0
              character: 53
        message: Diagnostic mapped from here.
  - related_code: '#[improper_attribute_macro_v2]'
    diagnostic:
      range:
        start:
          line: 0
          character: 0
        end:
          line: 0
          character: 30
      severity: 1
      code: E2084
      message: |-
        Invalid left-hand side of assignment.
        note: this error originates in the attribute macro: `improper_attribute_macro_v2`
      relatedInformation:
      - location:
          uri: vfs://proc_improper_attribute_macro_v2.cairo
          range:
            start:
              line: 0
              character: 50
            end:
              line: 0
              character: 51
        message: Diagnostic mapped from here.
  - related_code: 5_felt252
    diagnostic:
      range:
        start:
          line: 1
          character: 18
        end:
          line: 1
          character: 27
      severity: 1
      code: E2041
      message: |-
        Unexpected argument type. Expected: "u8", found: "felt252".
        note: this error originates in the attribute macro: `improper_attribute_macro_v2`
      relatedInformation:
      - location:
          uri: vfs://proc_improper_attribute_macro_v2.cairo
          range:
            start:
              line: 0
              character: 18
            end:
              line: 0
              character: 27
        message: Diagnostic mapped from here.
