tests/e2e/macros/procedural/custom/v2/snapshots/e2e__macros__procedural__custom__v2__derive_complex_v2_with_user_error.snap
---
source: tests/e2e/macros/procedural/custom/v2/mod.rs
description: "// → test_package/Scarb.toml\n[package]\nname = \"test_package\"\nversion = \"0.1.0\"\nedition = \"2024_07\"\n\n[dependencies]\ncairols_test_macros_v2 = { path = \"/scarb_procedural_macros_v2\" }\n\n// → test_package/src/lib.cairo\n#[derive(ComplexDeriveMacroV2)]\nstruct EmptyStruct { x: u8, x: u8 }"
expression: report
---
[[expansions]]
analyzed_lines = """
#[derive<caret>(ComplexDeriveMacroV2)]
#[derive(Complex<caret>DeriveMacroV2)]
struct Empty<caret>Struct { x: u8, x: u8 }
struct EmptyStruct { x: u8, x: u8 <caret>}
"""
generated_code = """
#[derive(ComplexDeriveMacroV2)]
struct EmptyStruct {
    x: u8,
    x: u8,
}
//-----
fn another_generated_function_v2() {}
fn generated_function_v2() {}
//-----
trait MyTraitV2<T> {
    fn bar(t: T);
}
//-----
impl MyTraitImpl of MyTraitV2<felt252> {
    fn bar(t: felt252) {}
}
"""

mapped_diagnostics:
- url: '[ROOT_URL]test_package/src/lib.cairo'
  diagnostics:
  - related_code: 'x: u8'
    diagnostic:
      range:
        start:
          line: 1
          character: 28
        end:
          line: 1
          character: 33
      severity: 1
      message: Redefinition of member "x" on struct "test_package::EmptyStruct".
