tests/e2e/macros/procedural/custom/v2/snapshots/e2e__macros__procedural__custom__v2__derive_improper_v2_with_user_error.snap
---
source: tests/e2e/macros/procedural/custom/v2/mod.rs
description: "// → test_package/Scarb.toml\n[package]\nname = \"test_package\"\nversion = \"0.1.0\"\nedition = \"2025_12\"\n\n[dependencies]\ncairols_test_macros_v2 = { path = \"/scarb_procedural_macros_v2\" }\n\n// → test_package/src/lib.cairo\n#[derive(ImproperDeriveMacroV2)]\nstruct EmptyStruct { a: b,}"
expression: report
---
[[expansions]]
analyzed_lines = """
#[derive<caret>(ImproperDeriveMacroV2)]
#[derive(Improper<caret>DeriveMacroV2)]
struct Empty<caret>Struct { a: b,}
struct EmptyStruct { a: b,<caret>}
"""
generated_code = """
#[derive(ImproperDeriveMacroV2)]
struct EmptyStruct {
    a: b,
}
fn generated_function_v2() {
    some < *> haskell < $> syntax
}
"""

mapped_diagnostics:
- url: '[ROOT_URL]test_package/src/lib.cairo'
  diagnostics:
  - related_code: ImproperDeriveMacroV2
    diagnostic:
      range:
        start:
          line: 0
          character: 9
        end:
          line: 0
          character: 30
      severity: 1
      code: E1002
      message: |-
        Missing tokens. Expected an expression.
        note: this error originates in the derive macro: `ImproperDeriveMacroV2`
      relatedInformation:
      - location:
          uri: vfs://proc_macro_derive.cairo
          range:
            start:
              line: 0
              character: 33
            end:
              line: 0
              character: 33
        message: Diagnostic mapped from here.
  - related_code: ImproperDeriveMacroV2
    diagnostic:
      range:
        start:
          line: 0
          character: 9
        end:
          line: 0
          character: 30
      severity: 1
      code: E1028
      message: |-
        Consecutive comparison operators are not allowed: '<' followed by '>'
        note: this error originates in the derive macro: `ImproperDeriveMacroV2`
      relatedInformation:
      - location:
          uri: vfs://proc_macro_derive.cairo
          range:
            start:
              line: 0
              character: 33
            end:
              line: 0
              character: 33
        message: Diagnostic mapped from here.
  - related_code: ImproperDeriveMacroV2
    diagnostic:
      range:
        start:
          line: 0
          character: 9
        end:
          line: 0
          character: 30
      severity: 1
      code: E1028
      message: |-
        Consecutive comparison operators are not allowed: '>' followed by '<'
        note: this error originates in the derive macro: `ImproperDeriveMacroV2`
      relatedInformation:
      - location:
          uri: vfs://proc_macro_derive.cairo
          range:
            start:
              line: 0
              character: 41
            end:
              line: 0
              character: 41
        message: Diagnostic mapped from here.
  - related_code: ImproperDeriveMacroV2
    diagnostic:
      range:
        start:
          line: 0
          character: 9
        end:
          line: 0
          character: 30
      severity: 1
      code: E1003
      message: |-
        Missing tokens. Expected a path segment.
        note: this error originates in the derive macro: `ImproperDeriveMacroV2`
      relatedInformation:
      - location:
          uri: vfs://proc_macro_derive.cairo
          range:
            start:
              line: 0
              character: 43
            end:
              line: 0
              character: 43
        message: Diagnostic mapped from here.
  - related_code: ImproperDeriveMacroV2
    diagnostic:
      range:
        start:
          line: 0
          character: 9
        end:
          line: 0
          character: 30
      severity: 1
      code: E1028
      message: |-
        Consecutive comparison operators are not allowed: '<' followed by '>'
        note: this error originates in the derive macro: `ImproperDeriveMacroV2`
      relatedInformation:
      - location:
          uri: vfs://proc_macro_derive.cairo
          range:
            start:
              line: 0
              character: 43
            end:
              line: 0
              character: 43
        message: Diagnostic mapped from here.
  - related_code: ImproperDeriveMacroV2
    diagnostic:
      range:
        start:
          line: 0
          character: 9
        end:
          line: 0
          character: 30
      severity: 1
      code: E0006
      message: |-
        Identifier not found.
        note: this error originates in the derive macro: `ImproperDeriveMacroV2`
      relatedInformation:
      - location:
          uri: vfs://proc_macro_derive.cairo
          range:
            start:
              line: 0
              character: 27
            end:
              line: 0
              character: 31
        message: Diagnostic mapped from here.
  - related_code: ImproperDeriveMacroV2
    diagnostic:
      range:
        start:
          line: 0
          character: 9
        end:
          line: 0
          character: 30
      severity: 1
      code: E2183
      message: |-
        Are you missing a `::`?.
        note: this error originates in the derive macro: `ImproperDeriveMacroV2`
      relatedInformation:
      - location:
          uri: vfs://proc_macro_derive.cairo
          range:
            start:
              line: 0
              character: 31
            end:
              line: 0
              character: 32
        message: Diagnostic mapped from here.
  - related_code: ImproperDeriveMacroV2
    diagnostic:
      range:
        start:
          line: 0
          character: 9
        end:
          line: 0
          character: 30
      severity: 1
      code: E0006
      message: |-
        Identifier not found.
        note: this error originates in the derive macro: `ImproperDeriveMacroV2`
      relatedInformation:
      - location:
          uri: vfs://proc_macro_derive.cairo
          range:
            start:
              line: 0
              character: 34
            end:
              line: 0
              character: 41
        message: Diagnostic mapped from here.
  - related_code: ImproperDeriveMacroV2
    diagnostic:
      range:
        start:
          line: 0
          character: 9
        end:
          line: 0
          character: 30
      severity: 1
      code: E2183
      message: |-
        Are you missing a `::`?.
        note: this error originates in the derive macro: `ImproperDeriveMacroV2`
      relatedInformation:
      - location:
          uri: vfs://proc_macro_derive.cairo
          range:
            start:
              line: 0
              character: 41
            end:
              line: 0
              character: 42
        message: Diagnostic mapped from here.
  - related_code: ImproperDeriveMacroV2
    diagnostic:
      range:
        start:
          line: 0
          character: 9
        end:
          line: 0
          character: 30
      severity: 1
      code: E0006
      message: |-
        Identifier not found.
        note: this error originates in the derive macro: `ImproperDeriveMacroV2`
      relatedInformation:
      - location:
          uri: vfs://proc_macro_derive.cairo
          range:
            start:
              line: 0
              character: 44
            end:
              line: 0
              character: 50
        message: Diagnostic mapped from here.
  - related_code: b
    diagnostic:
      range:
        start:
          line: 1
          character: 24
        end:
          line: 1
          character: 25
      severity: 1
      code: E0006
      message: Type not found.
