tests/e2e/macros/procedural/custom/v2/snapshots/e2e__macros__procedural__custom__v2__derive_with_error_v2.snap
---
source: tests/e2e/macros/procedural/custom/v2/mod.rs
description: "// → test_package/Scarb.toml\n[package]\nname = \"test_package\"\nversion = \"0.1.0\"\nedition = \"2024_07\"\n\n[dependencies]\ncairols_test_macros_v2 = { path = \"/Users/piotr/Projects/cairols/tests/scarb_procedural_macros_v2\" }\n\n// → test_package/src/lib.cairo\n#[derive(ErrorDeriveMacroV2)]\nstruct EmptyStruct {}"
expression: report
---
[[expansions]]
analyzed_lines = """
#[derive<caret>(ErrorDeriveMacroV2)]
#[derive(Error<caret>DeriveMacroV2)]
struct Empty<caret>Struct {}
struct EmptyStruct {<caret>}
"""
generated_code = """
#[derive(ErrorDeriveMacroV2)]
struct EmptyStruct {}
"""

mapped_diagnostics:
- url: '[ROOT_URL]test_package/src/lib.cairo'
  diagnostics:
  - related_code: ErrorDeriveMacroV2
    diagnostic:
      range:
        start:
          line: 0
          character: 9
        end:
          line: 0
          character: 27
      severity: 1
      message: 'Plugin diagnostic: Error from procedural macro'
