tests/e2e/macros/procedural/custom/v2/snapshots/e2e__macros__procedural__custom__v2__derive_with_location_error_v2.snap
---
source: tests/e2e/macros/procedural/custom/v2/mod.rs
description: "// → test_package/Scarb.toml\n[package]\nname = \"test_package\"\nversion = \"0.1.0\"\nedition = \"2025_12\"\n\n[dependencies]\ncairols_test_macros_v2 = { path = \"/scarb_procedural_macros_v2\" }\n\n// → test_package/src/lib.cairo\n#[derive(ErrorDeriveWithLocationMacroV2)]\nstruct EmptyStruct {}"
expression: report
---
[[expansions]]
analyzed_lines = """
#[derive<caret>(ErrorDeriveWithLocationMacroV2)]
#[derive(Error<caret>DeriveWithLocationMacroV2)]
struct Empty<caret>Struct {}
struct EmptyStruct {<caret>}
"""
generated_code = """
#[derive(ErrorDeriveWithLocationMacroV2)]
struct EmptyStruct {}
"""

mapped_diagnostics:
- url: '[ROOT_URL]test_package/src/lib.cairo'
  diagnostics:
  - related_code: '#'
    diagnostic:
      range:
        start:
          line: 0
          character: 0
        end:
          line: 0
          character: 1
      severity: 1
      code: E2200
      message: 'Plugin diagnostic: Error from procedural macro'
