tests/e2e/macros/procedural/custom/v2/snapshots/e2e__macros__procedural__custom__v2__diagnostics_of_second_derive_land_on_it.snap
---
source: tests/e2e/macros/procedural/custom/v2/mod.rs
description: "// → test_package/Scarb.toml\n[package]\nname = \"test_package\"\nversion = \"0.1.0\"\nedition = \"2025_12\"\n\n[dependencies]\ncairols_test_macros_v2 = { path = \"/scarb_procedural_macros_v2\" }\n\n// → test_package/src/lib.cairo\n#[derive(SimpleDeriveMacroV2, ErroneousDeriveMacroV2)]\nstruct NoDebug{\n    x: u32,\n}"
expression: report
snapshot_kind: text
---
[[expansions]]
analyzed_lines = """
#[derive(SimpleDeriveMacroV2, ErroneousDeriveMacroV2)]<caret>
"""
generated_code = """
#[derive(SimpleDeriveMacroV2, ErroneousDeriveMacroV2)]
struct NoDebug {
    x: u32,
}
trait MyTrait<T> {
    fn foo(t: T);
}
impl MyTraitImpl of MyTrait<felt252> {
    fn foo(t: felt252) {}
}
fn erroneous_generated_fn_v2() {
    let _x: felt252 = 1_u32;
}
"""

mapped_diagnostics:
- url: '[ROOT_URL]test_package/src/lib.cairo'
  diagnostics:
  - related_code: ErroneousDeriveMacroV2
    diagnostic:
      range:
        start:
          line: 0
          character: 30
        end:
          line: 0
          character: 52
      severity: 1
      code: E2041
      message: |-
        Unexpected argument type. Expected: "felt252", found: "u32".
        note: this error originates in one of the derive macros: `SimpleDeriveMacroV2`, `ErroneousDeriveMacroV2`
      relatedInformation:
      - location:
          uri: vfs://proc_macro_derive.cairo
          range:
            start:
              line: 0
              character: 133
            end:
              line: 0
              character: 138
        message: Diagnostic mapped from here.
